# flex-kit

./: .gitignore  .releaser.toml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
demo/: .gitignore  README.md  run.sh
docs/: how-to-use.md  prepkit-concept-spec.md
docs/workflows/: 1-build-sync.md  2-plan-lifecycle.md  3-hooks-runtime.md  4-review.md  5-codex-review.md  6-delivery.md  7-design-first.md  README.md  build-sync.md  codex-review.md  delivery.md  design-first.md  hooks-runtime.md  plan-lifecycle.md  review.md
flex_kit/: __init__.py  add.py  agents.py  build.py  catalog.py  codex_review.py  commands.py  config.py  docs.py  doctor.py  emit.py  frontmatter.py  gen.py  hooks.py  init.py  main.py  modes.py  plan.py  record.py  registry.py  render.py  skills.py  ui.py
flex_kit/checks/: __init__.py  agent_contract.py  doc_targets.py  generated_in_sync.py  skill_contract.py  skill_refs.py  source_valid.py
flex_kit/hosts/: claude.py  codex.py
flex_kit/packs/api-design/skills/api-design-pattern/: SKILL.md
flex_kit/packs/architecture/skills/architecture-design-patterns/: SKILL.md
flex_kit/packs/backend/skills/backend-restful-api/: SKILL.md
flex_kit/packs/engineering/skills/engineering-clean-architecture/: SKILL.md
flex_kit/packs/engineering/skills/engineering-concurrency/: SKILL.md
flex_kit/packs/engineering/skills/engineering-design-patterns/: SKILL.md
flex_kit/packs/engineering/skills/engineering-domain-modeling/: SKILL.md
flex_kit/packs/engineering/skills/engineering-error-handling/: SKILL.md
flex_kit/packs/frontend/skills/frontend-accessibility/: SKILL.md
flex_kit/packs/frontend/skills/frontend-component-design/: SKILL.md
flex_kit/packs/frontend/skills/frontend-performance/: SKILL.md
flex_kit/packs/frontend/skills/frontend-state-management/: SKILL.md
flex_kit/packs/frontend/skills/frontend-styling/: SKILL.md
flex_kit/packs/python/skills/python-idioms/: SKILL.md
flex_kit/packs/python/skills/python-typing/: SKILL.md
flex_kit/packs/rust/skills/rust-naming/: SKILL.md
flex_kit/templates/docs/: architecture.md
flex_kit/templates/docs/adr/: 0001-example.md
flex_kit/templates/docs/conventions/: api.md  naming.md  testing.md
flex_kit/templates/docs/domain/: example.md
flex_kit/templates/flexkit/: config.json  config.toml  flexkit.config.json
flex_kit/templates/flexkit/agents/: debugger.md  example-agent.md  implementer.md  planner.md  reviewer.md  simplifier.md  tester.md
flex_kit/templates/flexkit/commands/: close.md  flex-agent-creator.md  flex-change.md  flex-close.md  flex-codex-review.md  flex-commit.md  flex-docs.md  flex-fix.md  flex-guide-creator.md  flex-implement.md  flex-next-step.md  flex-plan.md  flex-review.md  flex-simplify.md  flex-skill-creator.md  flex-status.md  implement.md  next-step.md  plan.md  status.md
tests/: conftest.py  test_add.py  test_agent_contract.py  test_agents.py  test_codex_review.py  test_commands.py  test_config.py  test_doc_targets.py  test_docs.py  test_flexkit.py  test_gen.py  test_hooks.py  test_init.py  test_modes.py  test_plan.py  test_remove.py  test_skill_contract.py
tests/fixtures/proj/.flexkit/: config.json  config.toml
(+58 files in other folders)
