[tool.poetry]
name = "flex-kit"
version = "0.1.0"
description = "Single-source AI-host kit: author skills once, generate native surfaces for Claude Code and Codex, validate they stay in sync."
license = "MIT"
packages = [{include = "flex_kit"}]
include = [
  { path = "flex_kit/templates/**/*", format = ["sdist", "wheel"] },
  { path = "flex_kit/packs/**/*", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.10"
typer = ">=0.12.0"
rich = ">=13.0.0"  # already pulled by typer; declared since ui.py imports it directly
questionary = ">=2.0.0"  # interactive pickers (e.g. `flex-kit add` with no args)

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9"
ruff = ">=0.2.0"
mypy = ">=1.8.0,<2"

[tool.poetry.scripts]
flex-kit = "flex_kit.main:_main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
