[project]
name = "flex-kit"
version = "0.1.3"
description = "Single-source AI-host kit: author skills once, generate native surfaces for Claude Code and Codex, validate they stay in sync."
license = "MIT"
requires-python = ">=3.11"
dependencies = [ "typer>=0.12.0", "rich>=13.0.0", "questionary>=2.0.0",]

[dependency-groups]
dev = [ "pytest>=8.0.0,<9", "ruff>=0.2.0", "mypy>=1.8.0,<2",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
flex-kit = "flex_kit.main:_main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true

[tool.ruff.lint]
select = [ "E", "F", "I", "N", "W", "UP",]

[tool.pytest.ini_options]
testpaths = [ "tests",]

[tool.hatch.build.targets.wheel]
packages = [ "flex_kit",]
